--- a/src/main/resources/com/example/proyectobancobases1/VistasBancoABC.fxml
+++ b/src/main/resources/com/example/proyectobancobases1/VistasBancoABC.fxml
@@ -430,7 +430,7 @@
             </AnchorPane>
          </children>
       </Pane>
-      <Pane fx:id="PaneFormulariosEntidades" prefHeight="602.0" prefWidth="861.0">
+      <Pane fx:id="PaneFormulariosEntidades" prefHeight="602.0" prefWidth="861.0" visible="false">
          <children>
             <AnchorPane fx:id="AnchorDepartamentos" prefHeight="602.0" prefWidth="861.0" style="-fx-background-color: &quot;881B1B&quot;;" visible="false">
                <children>
@@ -699,7 +699,7 @@
                   </Button>
                </children>
             </AnchorPane>
-            <AnchorPane fx:id="AnchorSucursales" prefHeight="602.0" prefWidth="861.0" style="-fx-background-color: &quot;881B1B&quot;;">
+            <AnchorPane fx:id="AnchorSucursales" prefHeight="602.0" prefWidth="861.0" style="-fx-background-color: &quot;881B1B&quot;;" visible="false">
                <children>
                   <Text fill="WHITE" layoutX="311.0" layoutY="72.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SUCURSALES">
                      <font>
